# SphericalOMT

./: CMakeLists.txt
include/: SphericalOMT.h
input/: bunny_area.txt  spot_cow.cmcf.ply  spot_cow.ot.ply
src/: SphericalOMT.cpp  main.cpp
